unpackaged/main/default/objects/Engagement__c/fields/Shipping_Notes__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Notes__c</fullName>
    <label>Shipping Notes</label>
    <type>TextArea</type>
</CustomField>