unpackaged/main/default/objects/Engagement__c/fields/Sold_Out__c.field-meta.xml
<CustomField>
    <fullName>Sold_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicate the Class was Sold Out and triggers Waitlist actions if a registered student cancels.</description>
    <label>Sold Out</label>
    <type>Checkbox</type>
</CustomField>