unpackaged/main/default/objects/Engagement__c/fields/Sold_Out_Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>Sold_Out_Notification_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Process Builder - Engagement on Create to indicate the Email Class Sold Out was sent then closes Enrollment Status</description>
    <label>Sold Out Notification Sent</label>
    <type>Checkbox</type>
</CustomField>