unpackaged/main/default/objects/Engagement__c/fields/Special_Billing_Form_Received__c.field-meta.xml
<CustomField>
    <fullName>Special_Billing_Form_Received__c</fullName>
    <description>NSRC-11555 - 5/6/25 - RS requested field for Accounting purposes. Used for Moderator Commissions. Accounting will set the field to indicate an Engagement Moderator has completed their fulfillment obligations.</description>
    <label>Special Billing Form Received</label>
    <type>Date</type>
</CustomField>