unpackaged/main/default/objects/Engagement__c/fields/Special_Type__c.field-meta.xml
<CustomField>
    <fullName>Special_Type__c</fullName>
    <label>Special Client Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Engagement_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dealer</fullName>
            </value>
            <value>
                <fullName>Dealer Group</fullName>
            </value>
            <value>
                <fullName>OEM Program</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>