unpackaged/main/default/objects/Engagement__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State(old)</label>
    <length>3</length>
    <type>Text</type>
</CustomField>