unpackaged/main/default/objects/Engagement__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tentative</fullName>
                <default>true</default>
                <label>Tentative</label>
            </value>
            <value>
                <fullName>Firm</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Cancellation Inquiry</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Cancelled – Rebooked</fullName>
            </value>
            <value>
                <fullName>Planning</fullName>
            </value>
            <value>
                <fullName>Finalized</fullName>
            </value>
            <value>
                <fullName>Engagement Complete</fullName>
            </value>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Accounting Re-Open</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
                <isActive>false</isActive>
                <label>Confirmed</label>
            </value>
            <value>
                <fullName>OPEN</fullName>
                <isActive>false</isActive>
                <label>OPEN</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>