unpackaged/main/default/objects/Engagement__c/fields/Status_Update_Message_Code__c.field-meta.xml
<CustomField>
    <fullName>Status_Update_Message_Code__c</fullName>
    <description>Used for automated processes to update last change and why</description>
    <label>Status Update Message (Code)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>