unpackaged/main/default/objects/Engagement__c/fields/Student_Count_new__c.field-meta.xml
<CustomField>
    <fullName>Student_Count_new__c</fullName>
    <inlineHelpText>Includes students in Registration Received and Attended status only</inlineHelpText>
    <label>Student Count</label>
    <summaryFilterItems>
        <field>Engagement_Attendee__c.Attendance_Status__c</field>
        <operation>equals</operation>
        <value>Registration Confirmed, Attended</value>
    </summaryFilterItems>
    <summaryForeignKey>Engagement_Attendee__c.Engagement__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>