unpackaged/main/default/objects/Engagement__c/fields/Subscription_Seats__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Seats__c</fullName>
    <label>Subscription Seats</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>