unpackaged/main/default/objects/Engagement__c/fields/Subscription_Seats_Attended__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Seats_Attended__c</fullName>
    <label>Student Count Subscription Seats</label>
    <summaryFilterItems>
        <field>Engagement_Attendee__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Institute - Training Subscription Seats</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Engagement_Attendee__c.Attendance_Status__c</field>
        <operation>equals</operation>
        <value>Attended, Registration Confirmed, Attended</value>
    </summaryFilterItems>
    <summaryForeignKey>Engagement_Attendee__c.Engagement__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>