unpackaged/main/default/objects/Engagement__c/fields/Support_Manager__c.field-meta.xml
<CustomField>
    <fullName>Support_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Support Manager</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>User is not an authorized NCM Employee.</errorMessage>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>NCM Associates</value>
        </filterItems>
        <filterItems>
            <field>Contact.Employment_Status__c</field>
            <operation>equals</operation>
            <value>Employed</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Engagements (Support Manager)</relationshipLabel>
    <relationshipName>Engagements2</relationshipName>
    <type>Lookup</type>
</CustomField>