unpackaged/main/default/objects/Engagement__c/fields/Survey_s_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Survey_s_Submitted__c</fullName>
    <label>Survey&#39;s Submitted</label>
    <type>TextArea</type>
</CustomField>