unpackaged/main/default/objects/Engagement__c/fields/Survey_Send_Time__c.field-meta.xml
<CustomField>
    <fullName>Survey_Send_Time__c</fullName>
    <label>Survey Send Time</label>
    <type>DateTime</type>
</CustomField>