unpackaged/main/default/objects/Engagement__c/fields/Test_Send_Time__c.field-meta.xml
<CustomField>
    <fullName>Test_Send_Time__c</fullName>
    <label>Test Send Time</label>
    <type>DateTime</type>
</CustomField>