unpackaged/main/default/objects/Engagement__c/fields/Total_Cancellations__c.field-meta.xml
<CustomField>
    <fullName>Total_Cancellations__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Includes Cancelled, Rebooking and those who moved to a new engagement.</inlineHelpText>
    <label>Total Cancellations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>