unpackaged/main/default/objects/Engagement__c/fields/Total_Expenses_Concur__c.field-meta.xml
<CustomField>
    <fullName>Total_Expenses_Concur__c</fullName>
    <description>Roll up for Concur expenses on Engagement</description>
    <label>Total Expenses (Concur)</label>
    <summarizedField>Engagement_Expense__c.Amount__c</summarizedField>
    <summaryForeignKey>Engagement_Expense__c.Engagement__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>