unpackaged/main/default/objects/Engagement__c/fields/Total_Expenses_Pro_Rate__c.field-meta.xml
<CustomField>
    <fullName>Total_Expenses_Pro_Rate__c</fullName>
    <description>Entered by user - compared to Engagement Expenses (Concur) for accounting to determine all expenses are delivered from Concur</description>
    <label>Total Expenses (Pro-Rate)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>