unpackaged/main/default/objects/Engagement__c/fields/Total_Registrations__c.field-meta.xml
<CustomField>
    <fullName>Total_Registrations__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Includes all students who are registered in class or were at one point registered in class.</inlineHelpText>
    <label>Total Registrations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>