unpackaged/main/default/objects/Engagement__c/fields/Tracking_URL__c.field-meta.xml
<CustomField>
    <fullName>Tracking_URL__c</fullName>
    <label>Tracking URL</label>
    <type>Url</type>
</CustomField>