unpackaged/main/default/objects/Engagement__c/fields/Travel_Arrangements_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Travel_Arrangements_Confirmed__c</fullName>
    <label>Travel Arrangements Confirmed</label>
    <type>Date</type>
</CustomField>