unpackaged/main/default/objects/Engagement__c/fields/Travel_Lodging_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Travel_Lodging_Instructions__c</fullName>
    <inlineHelpText>This is used for emails sent out to the Engagement Attendees regarding Travel / Lodging information.</inlineHelpText>
    <label>Travel &amp; Lodging Instructions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>