unpackaged/main/default/objects/Engagement__c/fields/Two_Week_Check_Complete__c.field-meta.xml
<CustomField>
    <fullName>Two_Week_Check_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Two Week Check- Complete</label>
    <type>Checkbox</type>
</CustomField>