unpackaged/main/default/objects/Engagement__c/fields/Two_Week_Check_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Two_Week_Check_Start_Date__c</fullName>
    <label>Two Week Check- Start Date</label>
    <type>Date</type>
</CustomField>