unpackaged/main/default/objects/Engagement__c/fields/Waitlist__c.field-meta.xml
<CustomField>
    <fullName>Waitlist__c</fullName>
    <label>Waitlist- Deprecated</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>