unpackaged/main/default/objects/Engagement__c/fields/Waitlisted_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Waitlisted_Attendees__c</fullName>
    <label>Waitlisted Attendees</label>
    <summaryFilterItems>
        <field>Engagement_Waitlist__c.Waitlist_Status__c</field>
        <operation>equals</operation>
        <value>Pending Confirmation, Pending Sale</value>
    </summaryFilterItems>
    <summaryForeignKey>Engagement_Waitlist__c.Engagement__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>