unpackaged/main/default/objects/Engagement__c/fields/Work_Hours_Spent_On_Project__c.field-meta.xml
<CustomField>
    <fullName>Work_Hours_Spent_On_Project__c</fullName>
    <inlineHelpText>Increments of .25 for each 15 minutes spent.</inlineHelpText>
    <label>Work Hours Spent On Project</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>