unpackaged/main/default/objects/Engagement__c/fields/Workbook_Orders_Sent__c.field-meta.xml
<CustomField>
    <fullName>Workbook_Orders_Sent__c</fullName>
    <label>Workbook Orders Sent</label>
    <type>Date</type>
</CustomField>