unpackaged/main/default/objects/Engagement__c/fields/Wrap_Up_Complete__c.field-meta.xml
<CustomField>
    <fullName>Wrap_Up_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wrap Up- Complete</label>
    <type>Checkbox</type>
</CustomField>