unpackaged/main/default/objects/Engagement__c/fields/X20_Group__c.field-meta.xml
<CustomField>
    <fullName>X20_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>20 Group</label>
    <referenceTo>Twenty_Groups__c</referenceTo>
    <relationshipLabel>Engagements</relationshipLabel>
    <relationshipName>Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>