unpackaged/main/default/objects/Engagement__c/fields/Zoom_Link__c.field-meta.xml
<CustomField>
    <fullName>Zoom_Link__c</fullName>
    <label>Zoom Link</label>
    <type>Url</type>
</CustomField>