unpackaged/main/default/objects/Engagement__c/recordTypes/Business_Development.recordType-meta.xml
<RecordType>
    <fullName>Business_Development</fullName>
    <active>true</active>
    <description>Use for business/product related meetings, events, travel, etc</description>
    <label>Business Development</label>
</RecordType>