unpackaged/main/default/objects/Engagement__c/recordTypes/Digital_Performance_Solutions.recordType-meta.xml
<RecordType>
    <fullName>Digital_Performance_Solutions</fullName>
    <active>true</active>
    <description>Digital Performance Solutions</description>
    <label>Digital Performance Solutions</label>
</RecordType>