unpackaged/main/default/objects/Engagement__c/recordTypes/Institute.recordType-meta.xml
<RecordType>
    <fullName>Institute</fullName>
    <active>true</active>
    <description>NCMi classes performed in Kansas City headquarters location</description>
    <label>NCM Institute Class - Onsite</label>
</RecordType>