unpackaged/main/default/objects/Engagement__c/recordTypes/Institute_Offsite.recordType-meta.xml
<RecordType>
    <fullName>Institute_Offsite</fullName>
    <active>true</active>
    <description>Offiste NCMi classes not performed in Kansas City headquarters location</description>
    <label>NCM Institute Class - Offsite</label>
</RecordType>