unpackaged/main/default/objects/Engagement__c/recordTypes/Leadership_Development.recordType-meta.xml
<RecordType>
    <fullName>Leadership_Development</fullName>
    <active>true</active>
    <label>Leadership Development</label>
</RecordType>