unpackaged/main/default/objects/Engagement__c/recordTypes/NCM_Company_Event.recordType-meta.xml
<RecordType>
    <fullName>NCM_Company_Event</fullName>
    <active>true</active>
    <description>P3, Board Meetings, Travel, etc.</description>
    <label>NCM Company Event</label>
</RecordType>