unpackaged/main/default/objects/Engagement__c/recordTypes/NCM_Institute_Class_Live_Session_Virtual_Training.recordType-meta.xml
<RecordType>
    <fullName>NCM_Institute_Class_Live_Session_Virtual_Training</fullName>
    <active>true</active>
    <description>Live sessions for NCMi Virtual Training</description>
    <label>NCM Institute Class - Live Session Virtual Training</label>
</RecordType>