unpackaged/main/default/objects/Engagement__c/recordTypes/NCM_Institute_Class_Self_Study_Virtual_Training.recordType-meta.xml
<RecordType>
    <fullName>NCM_Institute_Class_Self_Study_Virtual_Training</fullName>
    <active>true</active>
    <description>Self Study Sessions for NCMi Virtual Training</description>
    <label>NCM Institute Class - Self Study Virtual Training</label>
</RecordType>