unpackaged/main/default/objects/Engagement__c/recordTypes/Professional_Development.recordType-meta.xml
<RecordType>
    <fullName>Professional_Development</fullName>
    <active>true</active>
    <description>Use for NCM Employee training or personal development events, courses, travel, etc.</description>
    <label>Professional Development</label>
</RecordType>