unpackaged/main/default/objects/Engagement__c/recordTypes/Professional_Services_20G.recordType-meta.xml
<RecordType>
    <fullName>Professional_Services_20G</fullName>
    <active>true</active>
    <description>NCM training for NCM 20 Groups</description>
    <label>Professional Services - 20 Group Training</label>
</RecordType>