unpackaged/main/default/objects/Engagement__c/recordTypes/Professional_Services_Business_Review.recordType-meta.xml
<RecordType>
    <fullName>Professional_Services_Business_Review</fullName>
    <active>true</active>
    <label>Professional Services - Business Review</label>
</RecordType>