unpackaged/main/default/objects/Engagement__c/recordTypes/Professional_Services_Consulting.recordType-meta.xml
<RecordType>
    <fullName>Professional_Services_Consulting</fullName>
    <active>true</active>
    <label>Professional Services - Consulting</label>
</RecordType>