unpackaged/main/default/objects/Engagement__c/recordTypes/Professional_Services_Training.recordType-meta.xml
<RecordType>
    <fullName>Professional_Services_Training</fullName>
    <active>true</active>
    <description>NCM Training for NCM clients</description>
    <label>Professional Services - Training</label>
</RecordType>