unpackaged/main/default/objects/Engagement__c/recordTypes/RES.recordType-meta.xml
<RecordType>
    <fullName>RES</fullName>
    <active>true</active>
    <label>RES</label>
</RecordType>