unpackaged/main/default/objects/Engagement__c/recordTypes/Retail_Solutions_20_Group_Special_Billing.recordType-meta.xml
<RecordType>
    <fullName>Retail_Solutions_20_Group_Special_Billing</fullName>
    <active>true</active>
    <description>Used for 20 Group engagements that will require special billing</description>
    <label>Retail Solutions - 20 Group Special Billing</label>
</RecordType>