unpackaged/main/default/objects/Engagement__c/recordTypes/Retail_Solutions_20_Group_Training.recordType-meta.xml
<RecordType>
    <fullName>Retail_Solutions_20_Group_Training</fullName>
    <active>false</active>
    <description>20 Group Training for Retail Solutions Clients</description>
    <label>Retail Solutions - 20 Group Training</label>
</RecordType>