unpackaged/main/default/objects/Engagement__c/recordTypes/Retail_Solutions_Consulting.recordType-meta.xml
<RecordType>
    <fullName>Retail_Solutions_Consulting</fullName>
    <active>true</active>
    <description>Consulting for Retail Solutions (OEM, Programs, etc)</description>
    <label>Retail Solutions - Consulting</label>
</RecordType>