unpackaged/main/default/objects/Engagement__c/recordTypes/Standing_Engagement.recordType-meta.xml
<RecordType>
    <fullName>Standing_Engagement</fullName>
    <active>true</active>
    <description>These are default NCM company engagements for general expenses</description>
    <label>Standing Engagement</label>
</RecordType>