unpackaged/main/default/objects/Engagement__c/recordTypes/Tradeshow.recordType-meta.xml
<RecordType>
    <fullName>Tradeshow</fullName>
    <active>true</active>
    <description>Tradeshows and Industry Events</description>
    <label>Tradeshow</label>
</RecordType>