unpackaged/main/default/objects/Engagement__c/recordTypes/X20_Group.recordType-meta.xml
<RecordType>
    <fullName>X20_Group</fullName>
    <active>true</active>
    <description>All Retail Solutions engagements (20 Group Meetings, Day Rate Consulting, et al)</description>
    <label>Retail Solutions</label>
</RecordType>