unpackaged/main/default/objects/Engagement__c/validationRules/Cannot_be_Firm_if_Hotel_is_not_Approved.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_be_Firm_if_Hotel_is_not_Approved</fullName>
    <active>false</active>
    <description>Hotel account must be approved prior to being FIRM</description>
    <errorConditionFormula>AND(

ISPICKVAL(Status__c,&quot;Firm&quot;),
ISBLANK(Confirmed_Hotel__c)=TRUE
)</errorConditionFormula>
    <errorDisplayField>of_Best_Ideas_Submitted__c</errorDisplayField>
    <errorMessage>The hotel account must be valid prior to marking the engagement FIRM. The requested hotel is not finished provisioning. Contact Travel Solutions for assistance.</errorMessage>
</ValidationRule>