unpackaged/main/default/objects/Engagement__c/validationRules/Certain_Countries_require_State.validationRule-meta.xml
<ValidationRule>
    <fullName>Certain_Countries_require_State</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   OR(
      ISPICKVAL(Country_pl__c,&quot;United States&quot;),
      ISPICKVAL(Country_pl__c,&quot;Canada&quot;),
      ISPICKVAL(Country_pl__c,&quot;French Polynesia&quot;),
      ISPICKVAL(Country_pl__c,&quot;Ireland&quot;),
      ISPICKVAL(Country_pl__c,&quot;Mexico&quot;),
      ISPICKVAL(Country_pl__c,&quot;Turks and Caicos Islands&quot;)
   ),
   ISBLANK(TEXT(State_pl__c)),
   NOT(RecordType.Name  =  &quot;NCM Institute Class - Onsite&quot; ),
   NOT(RecordType.Name = &quot;NCM Institute Class - Self Study Virtual Training&quot;),
   NOT(RecordType.Name = &quot;NCM Institute Class - Live Session Virtual Training&quot;),
   NOT(RecordType.Name = &quot;Standing Engagement&quot;),
   NOT( $User.FirstName = &quot;Automated&quot; ),
   NOT( $User.LastName = &quot;Process&quot; )
)</errorConditionFormula>
    <errorMessage>If certain countries are selected, then you must select a state.</errorMessage>
</ValidationRule>