unpackaged/main/default/objects/Engagement__c/validationRules/Country_Required_if_City_populated.validationRule-meta.xml
<ValidationRule>
    <fullName>Country_Required_if_City_populated</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   ISNEW(),
   NOT(ISBLANK(City__c)),
   ISBLANK(TEXT(Country_pl__c)),
   RecordType.DeveloperName != &quot;NCM_Institute_Class_Live_Session_Virtual_Training&quot;,
   RecordType.DeveloperName != &quot;NCM_Institute_Class_Self_Study_Virtual_Training&quot; 
)</errorConditionFormula>
    <errorMessage>If a City is entered you must also enter a Country.</errorMessage>
</ValidationRule>