unpackaged/main/default/objects/Engagement__c/validationRules/State_must_be_3_Characters.validationRule-meta.xml
<ValidationRule>
    <fullName>State_must_be_3_Characters</fullName>
    <active>true</active>
    <errorConditionFormula>LEN(State__c) &gt; 3</errorConditionFormula>
    <errorDisplayField>State__c</errorDisplayField>
    <errorMessage>State must only be three character abbreviation</errorMessage>
</ValidationRule>