unpackaged/main/default/objects/Engagement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Confirmed_Hotel__c</columns>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Engagement_Type__c</columns>
    <columns>Engagement_Start__c</columns>
    <columns>Engagement_End__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>