unpackaged/main/default/objects/Engagement__c/listViews/Andrea_Dalton.listView-meta.xml
<ListView>
    <fullName>Andrea_Dalton</fullName>
    <columns>Engagement_Start_Date__c</columns>
    <columns>NAME</columns>
    <columns>Engagement_Owner__c</columns>
    <columns>Group_No__c</columns>
    <columns>Engagement_Type__c</columns>
    <columns>NoReception__c</columns>
    <columns>No_Hotel_Contract_Required__c</columns>
    <columns>Engagement_Coordinator__c</columns>
    <columns>Support_Manager__c</columns>
    <columns>Status__c</columns>
    <columns>Cancellation_Reason__c</columns>
    <columns>Confirmed_Hotel__c</columns>
    <columns>CRF_Sent_to_Maritz__c</columns>
    <columns>Hotel_Contract_Finalized__c</columns>
    <columns>Hotel_Selected_by_NCM__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Engagement_Owner__c</field>
        <operation>contains</operation>
        <value>Andrea Dalton</value>
    </filters>
    <filters>
        <field>Confirmed_Hotel__c</field>
        <operation>notEqual</operation>
        <value>Virtual/Webinar</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled,Cancelled – Rebooked</value>
    </filters>
    <label>Andrea Dalton</label>
</ListView>