unpackaged/main/default/objects/Engagement__c/listViews/Copy_of_3M_NCM_Program_Engagements.listView-meta.xml
<ListView>
    <fullName>Copy_of_3M_NCM_Program_Engagements</fullName>
    <columns>NAME</columns>
    <columns>Location__c</columns>
    <columns>Engagement_Start__c</columns>
    <columns>Engagement_End__c</columns>
    <columns>Engagements_Checklist__c</columns>
    <columns>Program__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Program__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Copy of 3M NCM Program Engagements</label>
</ListView>